test/testdata/classes/methods/static/property_accessors/getter_too_many_params_error.lox
class Foo {
  // error: property getter cannot have parameters
  // lint error: property getter cannot have parameters
  static get bar(x, y) {
    _ = x;
    _ = y;
  }
}

_ = Foo;
